--- a/src/assets/style/fonts.scss
+++ b/src/assets/style/fonts.scss
@@ -6,54 +6,58 @@ h3,
 h4,
 h5,
 p {
-    font-family: inherit;
-    margin: 0;
-    // font-family: 'Noto Sans TC', serif;
+  font-family: inherit;
+  margin: 0;
+  // font-family: 'Noto Sans TC', serif;
 }
 
 h2 {
-    margin: 0;
-    font-weight: normal;
+  margin: 0;
+  font-weight: normal;
 }
 h3,
 label {
-    font-family: Arial, 'Noto Sans TC', sans-serif;
-    margin: 0;
-    //font-weight: bold;
+  font-family: Arial, "Noto Sans TC", sans-serif;
+  margin: 0;
+  //font-weight: bold;
 }
 
 p {
-    font-family: 'Noto Sans TC', serif;
-    // font-family: '微軟正黑體', 'Microsoft JhengHei', 'Helvetica Neue', Helvetica,
-    //   Arial;
-    margin: 0;
+  font-family: "Noto Sans TC", serif;
+  // font-family: '微軟正黑體', 'Microsoft JhengHei', 'Helvetica Neue', Helvetica,
+  //   Arial;
+  margin: 0;
 }
 
 /* animate css */
 
 /* font */
 @font-face {
-    font-family: DFPingJuStd;
-    src: url('~@/assets/font/DFPingJuStd-W7.otf?#iefix') format('embedded-opentype'),
-        url('~@/assets/font/DFPingJuStd-W7.otf');
+  font-family: DFPingJuStd;
+  src: url("~@/assets/font/DFPingJuStd-W7.otf?#iefix")
+      format("embedded-opentype"),
+    url("~@/assets/font/DFPingJuStd-W7.otf");
 }
 
 @font-face {
-    font-family: DFLiSongStd;
-    src: url('~@/assets/font/DFLiSongStd-W5.otf?#iefix') format('embedded-opentype'),
-        url('~@/assets/font/DFLiSongStd-W5.otf');
+  font-family: DFLiSongStd;
+  src: url("~@/assets/font/DFLiSongStd-W5.otf?#iefix")
+      format("embedded-opentype"),
+    url("~@/assets/font/DFLiSongStd-W5.otf");
 }
 
 @font-face {
-    font-family: 'TimesNewRoman';
-    src: url('~@/assets/font/TimesNewRoman.ttf') format('truetype'), url('~@/assets/font/TimesNewRoman.ttf');
-    font-weight: normal;
-    font-style: normal;
+  font-family: "TimesNewRoman";
+  src: url("~@/assets/font/TimesNewRoman.ttf") format("truetype"),
+    url("~@/assets/font/TimesNewRoman.ttf");
+  font-weight: normal;
+  font-style: normal;
 }
 
 @font-face {
-    font-family: Impact;
-    src: url('~@/assets/font/Impact.ttf') format('truetype'), url('~@/assets/font/Impact.ttf');
-    font-weight: normal;
-    font-style: normal;
+  font-family: Impact;
+  src: url("~@/assets/font/Impact.ttf") format("truetype"),
+    url("~@/assets/font/Impact.ttf");
+  font-weight: normal;
+  font-style: normal;
 }
