--- a/src/assets/style/variableColor.scss
+++ b/src/assets/style/variableColor.scss
@@ -10,7 +10,7 @@ $family4: Arial, "Noto Sans TC", sans-serif;
 
 /* navigation */
 $nav_bg: #006934;
-$nav_btn_color: #595757;
+$nav_btn_color: #fff;
 $nav_link_color: #fff;
 $nav_link_subtitle_color: #fff;
 $nav_link_hover_color: #ff8400;
@@ -82,7 +82,7 @@ $house_label_color: #333;
 $house_desc_color: #000;
 
 // mobileNav
-$mobile_nav_background: #FF8400;
+$mobile_nav_background: #006934;
 $mobile_nav_color: #fff;
 $mobile_nav_border: #fff;
 $mobile_nav_icon: #fff;
