--- a/src/assets/style/form.scss
+++ b/src/assets/style/form.scss
@@ -153,9 +153,9 @@
   }
 
   .form-submit {
-    width: 90% !important;
+    width: 100% !important;
     font-size: 16px !important;
-    margin: 10px auto !important;
+    margin: 10px 0px auto !important;
   }
 
   .el-date-editor.el-input {
