修改表單圖

--- a/src/assets/style/variableColor.scss
+++ b/src/assets/style/variableColor.scss
@@ -35,7 +35,7 @@ $mask_icon_color: #c82514;
 /* contactSection */
 // order
 $order_bg_color: transparent;
-$order_bg_image: url("~@/assets/img/order-bg.png");
+$order_bg_image: url("~@/assets/img/order-bg.jpg");
 $order_bg_image_m: transparent;
 $order_title_color: #fff;
 $order_subtitle_color: #fff;
