--- a/src/assets/style/variableColor.scss
+++ b/src/assets/style/variableColor.scss
@@ -88,9 +88,9 @@ $mobile_nav_border: #fff;
 $mobile_nav_icon: #fff;
 
 $mobile_dialog_bg: #fff;
-$mobile_dialog_icon: #d20028;
+$mobile_dialog_icon: #006934;
 $mobile_dialog_desc: #000;
-$mobile_dialog_submit_bg: #d20028;
+$mobile_dialog_submit_bg: #006934;
 $mobile_dialog_submit_color: #fff;
 
 /* dialog */
