修改手機版按鈕顏色

--- a/src/assets/style/variableColor.scss
+++ b/src/assets/style/variableColor.scss
@@ -100,7 +100,7 @@ $house_label_color: #333;
 $house_desc_color: #000;
 
 // mobileNav
-$mobile_nav_background: #ff8400;
+$mobile_nav_background: #a10080;
 $mobile_nav_color: #fff;
 $mobile_nav_border: #fff;
 $mobile_nav_icon: #fff;
