--- a/src/assets/style/variableColor.scss
+++ b/src/assets/style/variableColor.scss
@@ -13,7 +13,7 @@ $nav_bg: #006934;
 $nav_btn_color: #fff;
 $nav_link_color: #fff;
 $nav_link_subtitle_color: #fff;
-$nav_link_hover_color: #ff8400;
+$nav_link_hover_color: #FDD93F;
 $nav_link_hover_bg: #976a4b;
 $nav_link_border_bg: transparent;
 
