--- a/src/assets/style/variableColor.scss
+++ b/src/assets/style/variableColor.scss
@@ -35,7 +35,7 @@ $mask_icon_color: #c82514;
 /* contactSection */
 // order
 $order_bg_color: #006868;
-$order_bg_image: url('~@/assets/img/contact_bg.jpg');
+$order_bg_image: url('~@/projects/llcs/s1/draw.png');
 $order_bg_image_m: url('~@/assets/img/contact_bg_mo.jpg');
 $order_title_color: #fff;
 $order_subtitle_color: #fff;
