--- a/src/assets/style/global.scss
+++ b/src/assets/style/global.scss
@@ -352,13 +352,13 @@ img[lazy='loaded'] {
         // background-repeat: no-repeat;
         // background-size: cover;
         //background-attachment: fixed;
-        background-position: 0% 50%;
+     //   background-position: 0% 50%;
 
         &.no-padding-top {
             padding-top: 0;
         }
 
-        background-color: #fff;
+     //   background-color: #fff;
     }
 
     .full-bg {
