--- a/src/assets/style/global.scss
+++ b/src/assets/style/global.scss
@@ -34,7 +34,7 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     text-align: center;
-    color: #2c3e50;
+    color: #000;
 }
 
 .home {
