把多餘的字體拿掉

--- a/src/assets/style/fonts.scss
+++ b/src/assets/style/fonts.scss
@@ -32,6 +32,8 @@ p {
 /* animate css */
 
 /* font */
+
+/*
 @font-face {
     font-family: DFPingJuStd;
     src: url('~@/assets/font/DFPingJuStd-W7.otf?#iefix') format('embedded-opentype'),
@@ -50,7 +52,7 @@ p {
     font-weight: normal;
     font-style: normal;
 }
-
+*/
 @font-face {
     font-family: Impact;
     src: url('~@/assets/font/Impact.ttf') format('truetype'), url('~@/assets/font/Impact.ttf');
