--- a/src/assets/style/fonts.scss
+++ b/src/assets/style/fonts.scss
@@ -33,6 +33,7 @@ p {
 /* animate css */
 
 /* font */
+/*
 @font-face {
     font-family: DFPingJuStd;
     src: url('~@/assets/font/DFPingJuStd-W7.otf?#iefix') format('embedded-opentype'),
@@ -44,7 +45,7 @@ p {
     src: url('~@/assets/font/DFLiSongStd-W5.otf?#iefix') format('embedded-opentype'),
         url('~@/assets/font/DFLiSongStd-W5.otf');
 }
-
+*/
 @font-face {
     font-family: 'TimesNewRoman';
     src: url('~@/assets/font/TimesNewRoman.ttf') format('truetype'), url('~@/assets/font/TimesNewRoman.ttf');
