--- a/src/assets/style/variableColor.scss
+++ b/src/assets/style/variableColor.scss
@@ -1,17 +1,29 @@
 /* html, body */
+
 $bg: url("");
 
 /* font-family */
-/* 1主要字體  2次要字體  3表單字體  4黑體 */
-$family1: "youmin", "Noto Serif TC", sans-serif;
-$family2: "Noto Serif TC", sans-serif;
-$family3: "Noto Serif TC", sans-serif;
-$family4: "Noto Serif TC", sans-serif;
 
+
+/* 1主要字體  2次要字體  3表單字體  4黑體 */
+
+$family1: "youmin",
+"Noto Serif TC",
+sans-serif;
+$family2: "Noto Serif TC",
+sans-serif;
+$family3: "Noto Serif TC",
+sans-serif;
+$family4: "Noto Serif TC",
+sans-serif;
 $selection_color: grey;
 
 /* navigation */
-$nav_bg: rgba(255, 255, 255, 0.4);
+
+$nav_bg: rgba(255,
+255,
+255,
+0.4);
 $nav_btn_color: #000;
 $nav_link_color: #000;
 $nav_link_subtitle_color: #000;
@@ -20,27 +32,32 @@ $nav_link_hover_bg: #976a4b;
 $nav_link_border_bg: #000;
 
 /* loading */
+
 $loading_bg_color: #ccc;
 $loading_bg_image: #ccc;
 $loading_icon_color: #f7931e #f7931e transparent;
 
 /* astrictMask */
+
 $mask_bg_color: #fff;
-$mask_bg_image: linear-gradient(
-  to top,
-  rgba(0, 0, 0, 0.24),
-  rgba(156, 30, 35, 0)
-);
+$mask_bg_image: linear-gradient( to top,
+rgba(0, 0, 0, 0.24),
+rgba(156, 30, 35, 0));
 $mask_color: #333;
 $mask_icon_color: #c82514;
 
 /* contactSection */
+
 // order
 $order_bg_color: #006868;
-$order_bg_image: url('~@/assets/img/order_bg.jpg');
-$order_bg_image_m: url('~@/assets/img/order_bg.jpg');
-$order_title_color: #000;
-$order_subtitle_color: #000;
+$order_bg_image: linear-gradient(0deg,
+rgba(1, 57, 1, 1) 0%,
+rgba(66, 109, 28, 1) 100%);
+$order_bg_image_m: linear-gradient(0deg,
+rgba(1, 57, 1, 1) 0%,
+rgba(66, 109, 28, 1) 100%);
+$order_title_color: #FFD990;
+$order_subtitle_color: #fff;
 $order_input_label_color: #333333;
 $order_input_color: #000 !important;
 $order_input_placeholder: #999 !important;
@@ -50,60 +67,69 @@ $order_input_focus_border: solid 1px #fff !important;
 $order_input_selected_color: solid 1px #fff !important;
 $order_check_desc_color: #000 !important;
 $order_check_span_color: #000 !important;
-$order_submit_bg: #000;
 $order_submit_borderradius: 0px;
 $order_submit_color: #fff !important;
-$order_sumbit_disable_bg: #000;
-
+$order_sumbit_disable_bg: linear-gradient(-90deg,
+rgba(201, 154, 29, 1) 0%,
+rgba(242, 170, 84, 1) 100%);
+$order_submit_bg: linear-gradient(-90deg,
+rgba(201, 154, 29, 1) 0%,
+rgba(242, 170, 84, 1) 100%);
 // contactInfo
-$contact_bg: url('~@/assets/img/order_bg.jpg');
-$contact_bg_m: url('~@/assets/img/order_bg.jpg');
-$contact_shadow: 0 0 80px 0 rgba(0, 0, 0, 0.2);
-
-$contact_btn_border: inset 0 0 0px 0px #fff;
-$contact_btn_color: #000;
-$contact_btn_icon: #000;
-$contact_btn_bg: #fff;
-$contact_btn_hover_color: #fff;
-$contact_btn_hover_icon: #fff;
-$contact_btn_hover_bg: #000;
-$contact_btn_border_radius: 0px;
-$contact_btn_addr_border_radius: 0px 0 0 0px;
-$contact_btn_gbtn_border_radius: 0 0px 0px 0;
-
-$contact_btn_addr_border_radius_m: 0px 0px 0 0 !important;
-$contact_btn_gbtn_border_radius_m: 0 0 0px 0px !important;
-
+$contact_bg: linear-gradient(-90deg,
+rgba(201, 154, 29, 1) 0%,
+rgba(242, 170, 84, 1) 100%);
+$contact_bg_m: linear-gradient(-90deg,
+rgba(201, 154, 29, 1) 0%,
+rgba(242, 170, 84, 1) 100%);
+$contact_shadow: 0 0 80px 0 rgba(0,
+0,
+0,
+0.2);
+$contact_btn_border: inset 0 0 2px 2px #fff;
+$contact_btn_color: #fff;
+$contact_btn_icon: #fff;
+$contact_btn_bg: transparent;
+$contact_btn_hover_color: #000;
+$contact_btn_hover_icon: #000;
+$contact_btn_hover_bg: #fff;
+$contact_btn_border_radius: 5px;
+$contact_btn_addr_border_radius: 5px 0 0 5px;
+$contact_btn_gbtn_border_radius: 0 5px 5px 0;
+$contact_btn_addr_border_radius_m: 5px 5px 0 0 !important;
+$contact_btn_gbtn_border_radius_m: 0 0 5px 5px !important;
 $contact_google_btn_color: #fff;
 $contact_google_btn_icon: #fff;
-$contact_google_btn_bg: #000;
+$contact_google_btn_bg: #4A4A4A;
 $contact_google_border: inset 0 0 0px 0px #333;
-$contact_google_hover_btn_color: #333333;
-$contact_google_hover_btn_icon: #333333;
-$contact_google_hover_btn_bg: #fff;
+$contact_google_hover_btn_color: #fff;
+$contact_google_hover_btn_icon: #fff;
+$contact_google_hover_btn_bg: #000;
 $contact_google_hover_border: inset 0 0 0px 0px #fff;
-
 // houseInfo
-$house_bg: url('~@/assets/img/order_bg.jpg');
-$house_title_color: #fff;
-$house_border_color: #fff;
-$house_label_color: #fff;
-$house_desc_color: #fff;
-
+$house_bg: #fff;
+$house_title_color: #4A4A4A;
+$house_border_color: #C99A1D;
+$house_label_color: #4A4A4A;
+$house_desc_color: #4A4A4A;
 // mobileNav
-$mobile_nav_background: #BF191F;
+$mobile_nav_background: linear-gradient(-90deg,
+rgba(201, 154, 29, 1) 0%,
+rgba(242, 170, 84, 1) 100%);
 $mobile_nav_color: #fff;
 $mobile_nav_border: #fff;
 $mobile_nav_icon: #fff;
-
 $mobile_dialog_bg: #fff;
-$mobile_dialog_icon: #BF191F;
+$mobile_dialog_icon: #f2aa54;
 $mobile_dialog_desc: #000;
-$mobile_dialog_submit_bg: #BF191F;
+$mobile_dialog_submit_bg: #f2aa54;
 $mobile_dialog_submit_color: #fff;
 
 /* dialog */
+
+
 /* PhoneThanks.vue */
+
 $phone_thanks_bg: url("~@/assets/img/thank_bg.png");
 $phone_thanks_title_color: #fff;
 $phone_thanks_desc_color: #fff;
