--- a/src/assets/style/variableColor.scss
+++ b/src/assets/style/variableColor.scss
@@ -7,8 +7,7 @@ $bg: url("");
 
 /* 1主要字體  2次要字體  3表單字體  4黑體 */
 
-$family1: "youmin",
-"Noto Serif TC",
+$family1: "Noto Serif TC",
 sans-serif;
 $family2: "Noto Serif TC",
 sans-serif;
