修改表單樣式

--- a/src/assets/style/variableColor.scss
+++ b/src/assets/style/variableColor.scss
@@ -57,13 +57,13 @@ rgba(1, 57, 1, 1) 0%,
 #466e1e 90%);
 $order_title_color: #FFD990;
 $order_subtitle_color: #fff;
-$order_input_label_color: #333333;
-$order_input_color: #000 !important;
-$order_input_placeholder: #999 !important;
-$order_input_bg: #fff !important;
+$order_input_label_color: rgba(255, 255, 255, 0.8);
+$order_input_color: #fff !important;
+$order_input_placeholder: rgba(255, 255, 255, 0.8) !important;
+$order_input_bg: rgba(255, 255, 255, 0) !important;
 $order_input_border: solid 0 #fff;
-$order_input_focus_border: solid 1px #fff !important;
-$order_input_selected_color: solid 1px #fff !important;
+$order_input_focus_border: solid 0px #fff !important;
+$order_input_selected_color: solid 0px #fff !important;
 $order_check_desc_color: #FFF !important;
 $order_check_span_color: #ff0 !important;
 $order_submit_borderradius: 0px;
