--- a/src/assets/style/form.scss
+++ b/src/assets/style/form.scss
@@ -16,6 +16,10 @@
   margin-left: 44px;
 }
 
+.el-select__caret{
+  color: #fff !important;
+}
+
 .el-input__inner {
   width: 310px !important;
   height: 48px !important;
@@ -46,11 +50,12 @@
     font-size: 16px !important;
     border: $order_input_border !important;
     border-radius: 0px !important;
-    background: $order_input_bg !important;
+    background: transparent;
     font-family: $family3;
 
     &::placeholder {
       color: $order_input_placeholder;
+      font-size: 15px;
     }
 
     &:focus {
