--- a/src/assets/style/fonts.scss
+++ b/src/assets/style/fonts.scss
@@ -32,6 +32,7 @@ p {
 /* animate css */
 
 /* font */
+/*
 @font-face {
     font-family: DFPingJuStd;
     src: url('~@/assets/font/DFPingJuStd-W7.otf?#iefix') format('embedded-opentype'),
@@ -57,3 +58,4 @@ p {
     font-weight: normal;
     font-style: normal;
 }
+*/
