--- a/php-mailer/examples/styles/shThemeRDark.css
+++ b/php-mailer/examples/styles/shThemeRDark.css
@@ -24,7 +24,7 @@
 .syntaxhighlighter .value{color:#009900 !important;}
 .syntaxhighlighter .functions{color:#ffaa3e !important;}
 .syntaxhighlighter .constants{color:#e0e8ff !important;}
-.syntaxhighlighter .script{font-weight:bold !important;color:#5ba1cf !important;background-color:none !important;}
+.syntaxhighlighter .script{font-weight:600 !important;color:#5ba1cf !important;background-color:none !important;}
 .syntaxhighlighter .color1,.syntaxhighlighter .color1 a{color:#e0e8ff !important;}
 .syntaxhighlighter .color2,.syntaxhighlighter .color2 a{color:white !important;}
 .syntaxhighlighter .color3,.syntaxhighlighter .color3 a{color:#ffaa3e !important;}
