--- a/php-mailer/examples/styles/shCoreDefault.css
+++ b/php-mailer/examples/styles/shCoreDefault.css
@@ -1,7 +1,7 @@
-.syntaxhighlighter a,.syntaxhighlighter div,.syntaxhighlighter code,.syntaxhighlighter table,.syntaxhighlighter table td,.syntaxhighlighter table tr,.syntaxhighlighter table tbody,.syntaxhighlighter table thead,.syntaxhighlighter table caption,.syntaxhighlighter textarea{-moz-border-radius:0 0 0 0 !important;-webkit-border-radius:0 0 0 0 !important;background:none !important;border:0 !important;bottom:auto !important;float:none !important;height:auto !important;left:auto !important;line-height:1.1em !important;margin:0 !important;outline:0 !important;overflow:visible !important;padding:0 !important;position:static !important;right:auto !important;text-align:left !important;top:auto !important;vertical-align:baseline !important;width:auto !important;box-sizing:content-box !important;font-family:"Consolas","Bitstream Vera Sans Mono","Courier New",Courier,monospace !important;font-weight:normal !important;font-style:normal !important;font-size:1em !important;min-height:inherit !important;min-height:auto !important;}
+.syntaxhighlighter a,.syntaxhighlighter div,.syntaxhighlighter code,.syntaxhighlighter table,.syntaxhighlighter table td,.syntaxhighlighter table tr,.syntaxhighlighter table tbody,.syntaxhighlighter table thead,.syntaxhighlighter table caption,.syntaxhighlighter textarea{-moz-border-radius:0 0 0 0 !important;-webkit-border-radius:0 0 0 0 !important;background:none !important;border:0 !important;bottom:auto !important;float:none !important;height:auto !important;left:auto !important;line-height:1.1em !important;margin:0 !important;outline:0 !important;overflow:visible !important;padding:0 !important;position:static !important;right:auto !important;text-align:left !important;top:auto !important;vertical-align:baseline !important;width:auto !important;box-sizing:content-box !important;font-family:"Consolas","Bitstream Vera Sans Mono","Courier New",Courier,monospace !important;font-weight:300 !important;font-style:normal !important;font-size:1em !important;min-height:inherit !important;min-height:auto !important;}
 .syntaxhighlighter{width:100% !important;margin:1em 0 1em 0 !important;position:relative !important;overflow:auto !important;font-size:1em !important;}
 .syntaxhighlighter.source{overflow:hidden !important;}
-.syntaxhighlighter .bold{font-weight:bold !important;}
+.syntaxhighlighter .bold{font-weight:600 !important;}
 .syntaxhighlighter .italic{font-style:italic !important;}
 .syntaxhighlighter .line{white-space:pre !important;}
 .syntaxhighlighter table{width:100% !important;}
@@ -33,13 +33,13 @@
 .syntaxhighlighter.printing .plain,.syntaxhighlighter.printing .plain a{color:black !important;}
 .syntaxhighlighter.printing .comments,.syntaxhighlighter.printing .comments a{color:#008200 !important;}
 .syntaxhighlighter.printing .string,.syntaxhighlighter.printing .string a{color:blue !important;}
-.syntaxhighlighter.printing .keyword{color:#006699 !important;font-weight:bold !important;}
+.syntaxhighlighter.printing .keyword{color:#006699 !important;font-weight:600 !important;}
 .syntaxhighlighter.printing .preprocessor{color:gray !important;}
 .syntaxhighlighter.printing .variable{color:#aa7700 !important;}
 .syntaxhighlighter.printing .value{color:#009900 !important;}
 .syntaxhighlighter.printing .functions{color:#ff1493 !important;}
 .syntaxhighlighter.printing .constants{color:#0066cc !important;}
-.syntaxhighlighter.printing .script{font-weight:bold !important;}
+.syntaxhighlighter.printing .script{font-weight:600 !important;}
 .syntaxhighlighter.printing .color1,.syntaxhighlighter.printing .color1 a{color:gray !important;}
 .syntaxhighlighter.printing .color2,.syntaxhighlighter.printing .color2 a{color:#ff1493 !important;}
 .syntaxhighlighter.printing .color3,.syntaxhighlighter.printing .color3 a{color:red !important;}
@@ -70,8 +70,8 @@
 .syntaxhighlighter .value{color:#009900 !important;}
 .syntaxhighlighter .functions{color:#ff1493 !important;}
 .syntaxhighlighter .constants{color:#0066cc !important;}
-.syntaxhighlighter .script{font-weight:bold !important;color:#006699 !important;background-color:none !important;}
+.syntaxhighlighter .script{font-weight:600 !important;color:#006699 !important;background-color:none !important;}
 .syntaxhighlighter .color1,.syntaxhighlighter .color1 a{color:gray !important;}
 .syntaxhighlighter .color2,.syntaxhighlighter .color2 a{color:#ff1493 !important;}
 .syntaxhighlighter .color3,.syntaxhighlighter .color3 a{color:red !important;}
-.syntaxhighlighter .keyword{font-weight:bold !important;}
+.syntaxhighlighter .keyword{font-weight:600 !important;}
