--- a/php-mailer/examples/styles/shThemeEclipse.css
+++ b/php-mailer/examples/styles/shThemeEclipse.css
@@ -24,11 +24,11 @@
 .syntaxhighlighter .value{color:#009900 !important;}
 .syntaxhighlighter .functions{color:#ff1493 !important;}
 .syntaxhighlighter .constants{color:#0066cc !important;}
-.syntaxhighlighter .script{font-weight:bold !important;color:#7f0055 !important;background-color:none !important;}
+.syntaxhighlighter .script{font-weight:600 !important;color:#7f0055 !important;background-color:none !important;}
 .syntaxhighlighter .color1,.syntaxhighlighter .color1 a{color:gray !important;}
 .syntaxhighlighter .color2,.syntaxhighlighter .color2 a{color:#ff1493 !important;}
 .syntaxhighlighter .color3,.syntaxhighlighter .color3 a{color:red !important;}
-.syntaxhighlighter .keyword{font-weight:bold !important;}
-.syntaxhighlighter .xml .keyword{color:#3f7f7f !important;font-weight:normal !important;}
+.syntaxhighlighter .keyword{font-weight:600!important;}
+.syntaxhighlighter .xml .keyword{color:#3f7f7f !important;font-weight:300 !important;}
 .syntaxhighlighter .xml .color1,.syntaxhighlighter .xml .color1 a{color:#7f007f !important;}
 .syntaxhighlighter .xml .string{font-style:italic !important;color:#2a00ff !important;}
