--- a/php-mailer/examples/styles/shThemeEmacs.css
+++ b/php-mailer/examples/styles/shThemeEmacs.css
@@ -24,7 +24,7 @@
 .syntaxhighlighter .value{color:#009900 !important;}
 .syntaxhighlighter .functions{color:#81cef9 !important;}
 .syntaxhighlighter .constants{color:#ff9e7b !important;}
-.syntaxhighlighter .script{font-weight:bold !important;color:aqua !important;background-color:none !important;}
+.syntaxhighlighter .script{font-weight:600 !important;color:aqua !important;background-color:none !important;}
 .syntaxhighlighter .color1,.syntaxhighlighter .color1 a{color:#ebdb8d !important;}
 .syntaxhighlighter .color2,.syntaxhighlighter .color2 a{color:#ff7d27 !important;}
 .syntaxhighlighter .color3,.syntaxhighlighter .color3 a{color:#aec4de !important;}
