--- a/php-mailer/examples/styles/shThemeMDUltra.css
+++ b/php-mailer/examples/styles/shThemeMDUltra.css
@@ -24,7 +24,7 @@
 .syntaxhighlighter .value{color:#f7e741 !important;}
 .syntaxhighlighter .functions{color:#ff8000 !important;}
 .syntaxhighlighter .constants{color:yellow !important;}
-.syntaxhighlighter .script{font-weight:bold !important;color:#aaaaff !important;background-color:none !important;}
+.syntaxhighlighter .script{font-weight:600 !important;color:#aaaaff !important;background-color:none !important;}
 .syntaxhighlighter .color1,.syntaxhighlighter .color1 a{color:red !important;}
 .syntaxhighlighter .color2,.syntaxhighlighter .color2 a{color:yellow !important;}
 .syntaxhighlighter .color3,.syntaxhighlighter .color3 a{color:#ffaa3e !important;}
