--- a/src/assets/style/dialog.scss
+++ b/src/assets/style/dialog.scss
@@ -17,7 +17,7 @@
   .title {
     font-size: 24px;
     font-family: 'Noto Sans TC', serif;
-    font-weight: bold;
+    font-weight: 600;
     color: rgba(0, 0, 0, 0.8);
     line-height: 1.5;
     margin-bottom: 20px;
@@ -117,7 +117,7 @@
   .info {
     font-size: 22px;
     color: #000;
-    font-weight: bold;
+    font-weight: 600;
     text-align: center;
     margin-bottom: 15px;
     line-height: 1.2;
