--- a/src/assets/style/form.scss
+++ b/src/assets/style/form.scss
@@ -64,7 +64,7 @@
   h3 {
     font-size: 14px;
     color: $order_check_desc_color;
-    font-weight: normal;
+    font-weight: 300;
   }
 
   span {
