--- a/src/assets/style/dialog.scss
+++ b/src/assets/style/dialog.scss
@@ -57,6 +57,8 @@
 .el-dialog__headerbtn .el-dialog__close {
   font-size: 40px;
 }
+.size1 {
+  height: 197px !important;}
 
 /* 手機尺寸 */
 @media only screen and (max-width: 767px) {
@@ -65,6 +67,9 @@
     height: 80% !important;
     padding: 20px !important;
   }
+  .size1 {
+    height: 295px !important;}
+  
 }
 
 
@@ -135,3 +140,5 @@
     text-decoration: none;
   }
 }
+
+
