--- a/src/assets/style/fonts.scss
+++ b/src/assets/style/fonts.scss
@@ -15,45 +15,47 @@ h2 {
     margin: 0;
     font-weight: normal;
 }
+
 h3,
 label {
-    font-family: Arial, 'Noto Serif TC', sans-serif;
+    font-family: Arial, "Noto Serif TC", sans-serif;
     margin: 0;
     //font-weight: 300;
 }
 
 p {
-    font-family: 'Noto Serif TC', serif;
+    font-family: "Noto Sans TC", serif;
     // font-family: '微軟正黑體', 'Microsoft JhengHei', 'Helvetica Neue', Helvetica,
     //   Arial;
     margin: 0;
 }
 
+
 /* animate css */
 
+
 /* font */
+
 @font-face {
     font-family: DFPingJuStd;
-    src: url('~@/assets/font/DFPingJuStd-W7.otf?#iefix') format('embedded-opentype'),
-        url('~@/assets/font/DFPingJuStd-W7.otf');
+    src: url("~@/assets/font/DFPingJuStd-W7.otf?#iefix") format("embedded-opentype"), url("~@/assets/font/DFPingJuStd-W7.otf");
 }
 
 @font-face {
     font-family: DFLiSongStd;
-    src: url('~@/assets/font/DFLiSongStd-W5.otf?#iefix') format('embedded-opentype'),
-        url('~@/assets/font/DFLiSongStd-W5.otf');
+    src: url("~@/assets/font/DFLiSongStd-W5.otf?#iefix") format("embedded-opentype"), url("~@/assets/font/DFLiSongStd-W5.otf");
 }
 
 @font-face {
-    font-family: 'TimesNewRoman';
-    src: url('~@/assets/font/TimesNewRoman.ttf') format('truetype'), url('~@/assets/font/TimesNewRoman.ttf');
+    font-family: "TimesNewRoman";
+    src: url("~@/assets/font/TimesNewRoman.ttf") format("truetype"), url("~@/assets/font/TimesNewRoman.ttf");
     font-weight: 300;
     font-style: normal;
 }
 
 @font-face {
     font-family: Impact;
-    src: url('~@/assets/font/Impact.ttf') format('truetype'), url('~@/assets/font/Impact.ttf');
+    src: url("~@/assets/font/Impact.ttf") format("truetype"), url("~@/assets/font/Impact.ttf");
     font-weight: 600;
     font-style: normal;
 }
