--- a/src/assets/style/variableColor.scss
+++ b/src/assets/style/variableColor.scss
@@ -50,7 +50,7 @@ $mask_icon_color: #c82514;
 
 // order
 $order_bg_color: #006868;
-$order_bg_image: url("~@/assets/img/order_bg.jpg");
+$order_bg_image: url("~@/projects/cc/bg.jpg");
 $order_bg_image_m: url("~@/assets/img/order_bg.jpg");
 $order_title_color: #000;
 $order_subtitle_color: #000;
@@ -63,10 +63,10 @@ $order_input_focus_border: solid 1px #fff !important;
 $order_input_selected_color: solid 1px #fff !important;
 $order_check_desc_color: #000 !important;
 $order_check_span_color: #000 !important;
-$order_submit_bg: #000;
-$order_submit_borderradius: 0px;
+$order_submit_bg: #bbb29b;
+$order_submit_borderradius: 10px;
 $order_submit_color: #fff !important;
-$order_sumbit_disable_bg: #000;
+$order_sumbit_disable_bg: #fff;
 // contactInfo
 $contact_bg: url("~@/assets/img/order_bg.jpg");
 $contact_bg_m: url("~@/assets/img/order_bg.jpg");
@@ -75,24 +75,24 @@ $contact_shadow: 0 0 80px 0 rgba(0,
 0,
 0.2);
 $contact_btn_border: inset 0 0 0px 0px #fff;
-$contact_btn_color: #000;
-$contact_btn_icon: #000;
-$contact_btn_bg: #fff;
-$contact_btn_hover_color: #fff;
-$contact_btn_hover_icon: #fff;
-$contact_btn_hover_bg: #000;
-$contact_btn_border_radius: 0px;
-$contact_btn_addr_border_radius: 0px 0 0 0px;
-$contact_btn_gbtn_border_radius: 0 0px 0px 0;
+$contact_btn_color: #fff;
+$contact_btn_icon: #fff;
+$contact_btn_bg: #bbb29b;
+$contact_btn_hover_color: #333333;
+$contact_btn_hover_icon: #333333;
+$contact_btn_hover_bg: #bbb29b;
+$contact_btn_border_radius: 10px;
+$contact_btn_addr_border_radius: 10px 0 0 10px;
+$contact_btn_gbtn_border_radius: 0 10px 10px 0;
 $contact_btn_addr_border_radius_m: 0px 0px 0 0 !important;
 $contact_btn_gbtn_border_radius_m: 0 0 0px 0px !important;
 $contact_google_btn_color: #fff;
 $contact_google_btn_icon: #fff;
-$contact_google_btn_bg: #000;
+$contact_google_btn_bg: #bbb29b;
 $contact_google_border: inset 0 0 0px 0px #333;
 $contact_google_hover_btn_color: #333333;
 $contact_google_hover_btn_icon: #333333;
-$contact_google_hover_btn_bg: #fff;
+$contact_google_hover_btn_bg: #bbb29b;
 $contact_google_hover_border: inset 0 0 0px 0px #fff;
 // houseInfo
 $house_bg: url("~@/assets/img/order_bg.jpg");
@@ -101,14 +101,14 @@ $house_border_color: #fff;
 $house_label_color: #fff;
 $house_desc_color: #fff;
 // mobileNav
-$mobile_nav_background: #bf191f;
+$mobile_nav_background: #bbb29b;
 $mobile_nav_color: #fff;
 $mobile_nav_border: #fff;
 $mobile_nav_icon: #fff;
 $mobile_dialog_bg: #fff;
-$mobile_dialog_icon: #bf191f;
+$mobile_dialog_icon: #bbb29b;
 $mobile_dialog_desc: #000;
-$mobile_dialog_submit_bg: #bf191f;
+$mobile_dialog_submit_bg: #bbb29b;
 $mobile_dialog_submit_color: #fff;
 
 /* dialog */
