--- a/src/assets/style/dialog.scss
+++ b/src/assets/style/dialog.scss
@@ -16,8 +16,8 @@
   //overflow-y: scroll;
   .title {
     font-size: 24px;
-    font-family: 'Noto Sans TC', serif;
-    font-weight: 600;
+   // font-family: 'Noto Sans TC', serif;
+    font-weight: 500;
     color: rgba(0, 0, 0, 0.8);
     line-height: 1.5;
     margin-bottom: 20px;
@@ -26,7 +26,7 @@
 
   .subtitle {
     font-size: 16px;
-    font-family: 'Noto Sans TC', serif;
+ //   font-family: 'Noto Sans TC', serif;
     color: rgba(0, 0, 0, 0.6);
     line-height: 1.5;
     text-align: left;
@@ -117,7 +117,7 @@
   .info {
     font-size: 22px;
     color: #000;
-    font-weight: 600;
+    font-weight: 500;
     text-align: center;
     margin-bottom: 15px;
     line-height: 1.2;
