--- a/src/assets/style/global.scss
+++ b/src/assets/style/global.scss
@@ -40,9 +40,11 @@ body {
 .home {
     background: $bg;
     padding-top: $nav_pc_height;
-    background-size: cover;
+    background-attachment: fixed;
+    background-size:100% auto;
+ /*   background-size:100% auto;
     background-position: top;
-    background-repeat: no-repeat;
+    background-repeat: no-repeat; */
     overflow: hidden; //試底下多的那塊哪來的
 
     &.no-padding-top {
