--- a/src/assets/style/dialog.scss
+++ b/src/assets/style/dialog.scss
@@ -70,7 +70,7 @@
 
 .dialog-content {
   width: auto;
-  height: 295px;
+ // height: 295px;
   //border-radius: 5px;
   //margin: -30px 0;
   background-color: $mobile_dialog_bg;
