--- a/src/assets/style/slide.scss
+++ b/src/assets/style/slide.scss
@@ -56,7 +56,7 @@
 
 @media screen and (max-width: 767px) {
   .slide {
-    width: 100% !important;
+    width: 100%;
     .slide-img {
       width: 100%;
     }
