--- a/src/assets/style/global.scss
+++ b/src/assets/style/global.scss
@@ -356,6 +356,14 @@ img[lazy='loaded'] {
         // background-size: cover;
         //background-attachment: fixed;
      //   background-position: 0% 50%;
+     background:none;
+     &::before{content: "";
+    position: fixed;top: 0;left: 0;
+    bottom: 0;right: 0;
+    background:$bg-m top;
+    background-size: 100% auto;
+    
+    }
 
         &.no-padding-top {
             padding-top: 0;
