--- a/src/assets/style/variableColor.scss
+++ b/src/assets/style/variableColor.scss
@@ -93,11 +93,11 @@ $contact_google_hover_btn_bg: #fdd93f;
 $contact_google_hover_border: inset 0 0 0px 1.2px #fdd93f;
 
 // houseInfo
-$house_bg: #fdd93f;
+$house_bg: #FFF;
 $house_title_color: #333;
-$house_border_color: #333;
-$house_label_color: #333;
-$house_desc_color: #000;
+$house_border_color: #949494;
+$house_label_color: #e70054;
+$house_desc_color: #4d4d4d;
 
 // mobileNav
 $mobile_nav_background: #a10080;
