--- a/src/assets/style/variableColor.scss
+++ b/src/assets/style/variableColor.scss
@@ -16,10 +16,7 @@ $selection_color: grey;
 
 /* navigation */
 
-$nav_bg: rgba(255,
-255,
-255,
-0.4);
+$nav_bg: #64b46b;
 $nav_btn_color: #000;
 $nav_link_color: #000;
 $nav_link_subtitle_color: #000;
