--- a/src/assets/style/variableColor.scss
+++ b/src/assets/style/variableColor.scss
@@ -1,25 +1,21 @@
 /* html, body */
 
-$bg:url("");
-$bg_m:url("");
+$bg: url("");
+$bg_m: url("");
 
 /* font-family */
-
 
 /* 1主要字體  2次要字體  3表單字體  4黑體 */
 
 $family1: "Noto Sans TC", serif;
 $family2: "Noto Sans TC", serif;
 $family3: "Noto Sans TC", serif;
-$family4: "Noto Sans TC", serif,sans-serif;
+$family4: "Noto Sans TC", serif, sans-serif;
 $selection_color: grey;
 
 /* navigation */
 
-$nav_bg: rgba(255,
-255,
-255,
-0.4);
+$nav_bg: rgba(255, 255, 255, 0.4);
 $nav_btn_color: #000;
 $nav_link_color: #000;
 $nav_link_subtitle_color: #000;
@@ -36,9 +32,7 @@ $loading_icon_color: #f7931e #f7931e transparent;
 /* astrictMask */
 
 $mask_bg_color: #fff;
-$mask_bg_image: linear-gradient( to top,
-rgba(0, 0, 0, 0.24),
-rgba(156, 30, 35, 0));
+$mask_bg_image: linear-gradient(to top, rgba(0, 0, 0, 0.24), rgba(156, 30, 35, 0));
 $mask_color: #333;
 $mask_icon_color: #c82514;
 
@@ -46,69 +40,66 @@ $mask_icon_color: #c82514;
 
 // order
 $order_bg_color: #006868;
-$order_bg_image:none;
-$order_bg_image_m: none;
-$order_title_color: #000;
-$order_subtitle_color: #000;
-$order_input_label_color: #182C80;
-$order_input_color: #182C80 !important;
+$order_bg_image: url("~@/projects/tm/contact_bg.jpg");
+$order_bg_image_m: url("~@/projects/tm/contact_bg.jpg");
+$order_title_color: #fff;
+$order_subtitle_color: #fff;
+$order_input_label_color: #fff;
+$order_input_color: #000 !important;
 $order_input_placeholder: #999 !important;
 $order_input_bg: #fff !important;
-$order_input_border: solid 1px #182C80;
-$order_input_focus_border: solid 2px #182C80 !important;
+$order_input_border: solid 1px #fff;
+$order_input_focus_border: solid 2px #fff !important;
 $order_input_selected_color: solid 1px #fff !important;
-$order_check_desc_color: #000 !important;
-$order_check_span_color: #c00 !important;
-$order_submit_bg: #182C80;
+$order_check_desc_color: #fff !important;
+$order_check_span_color: #FFE200 !important;
+$order_submit_bg: transparent;
+$order_submit_border: 3px solid #B4904F !important;
 $order_submit_borderradius: 0px;
-$order_submit_color: #fff !important;
+$order_submit_color: #B4904F !important;
 $order_sumbit_disable_bg: #fff;
 // contactInfo
-$contact_bg: url("~@/assets/img/order_bg.jpg");
-$contact_bg_m: url("~@/assets/img/order_bg.jpg");
-$contact_shadow: 0 0 80px 0 rgba(0,
-0,
-0,
-0.2);
-$contact_btn_border: inset 0 0 1px 1px #182C80;
-$contact_btn_color: #182C80;
-$contact_btn_icon: #182C80;
-$contact_btn_bg: #fff;
+$contact_bg: #B4904F;
+$contact_bg_m: #B4904F;
+$contact_shadow: 0 0 80px 0 rgba(0, 0, 0, 0.2);
+$contact_btn_border: inset 0 0 1px 1px #fff;
+$contact_btn_color: #fff;
+$contact_btn_icon: #fff;
+$contact_btn_bg: transparent;
 $contact_btn_hover_color: #fff;
 $contact_btn_hover_icon: #fff;
-$contact_btn_hover_bg: #182C80;
+$contact_btn_hover_bg: #333333;
 $contact_btn_border_radius: 0px;
-$contact_btn_addr_border_radius: 10px 0 0 10px;
-$contact_btn_gbtn_border_radius: 0 10px 10px 0;
+$contact_btn_addr_border_radius: 0px 0 0 0px;
+$contact_btn_gbtn_border_radius: 0 0px 0px 0;
 $contact_btn_addr_border_radius_m: 0px 0px 0 0 !important;
 $contact_btn_gbtn_border_radius_m: 0 0 0px 0px !important;
 $contact_google_btn_color: #fff;
 $contact_google_btn_icon: #fff;
-$contact_google_btn_bg: #182C80;
+$contact_google_btn_bg: #333333;
 $contact_google_border: inset 0 0 0px 0px #333;
-$contact_google_hover_btn_color: #333333;
-$contact_google_hover_btn_icon: #333333;
-$contact_google_hover_btn_bg: #182C80;
+$contact_google_hover_btn_color: #fff;
+$contact_google_hover_btn_icon: #fff;
+$contact_google_hover_btn_bg: #333333;
 $contact_google_hover_border: inset 0 0 0px 0px #fff;
 // houseInfo
 $house_bg: url("~@/assets/img/order_bg.jpg");
-$house_title_color: #fff;
-$house_border_color: #fff;
-$house_label_color: #fff;
-$house_desc_color: #fff;
+$house_title_color: #333333;
+$house_border_color: #949494;
+$house_label_color: #B4904F;
+$house_desc_color: #333333;
 // mobileNav
-$mobile_nav_background: #182C80;
+$mobile_nav_background: #B4904F;
 $mobile_nav_color: #fff;
 $mobile_nav_border: #fff;
 $mobile_nav_icon: #fff;
 $mobile_dialog_bg: #fff;
-$mobile_dialog_icon: #182C80;
+$mobile_dialog_icon: #B4904F;
 $mobile_dialog_desc: #000;
-$mobile_dialog_submit_bg: #182C80;
+$mobile_dialog_submit_bg: #B4904F;
 $mobile_dialog_submit_color: #fff;
 
 /* dialog */
-
 
 /* PhoneThanks.vue */
 
