--- a/src/assets/style/variableColor.scss
+++ b/src/assets/style/variableColor.scss
@@ -21,13 +21,13 @@ $selection_color: grey;
 
 /* navigation */
 
-$nav_bg: #1B485B;
+$nav_bg: #1b485b;
 $nav_btn_color: #000;
 $nav_link_color: #fff;
 $nav_link_subtitle_color: #000;
 $nav_link_hover_color: #fff;
 $nav_link_hover_bg: #976a4b;
-$nav_link_border_bg: #986B48;
+$nav_link_border_bg: #986b48;
 
 /* loading */
 
@@ -54,32 +54,24 @@ $mask_icon_color: #c82514;
 
 // order
 $order_bg_color: #006868;
-$order_bg_image: url("~@/projects/cfyd/contact-bg.jpg");
-$order_bg_image_m: url("~@/projects/cfyd/contact-bg-m.jpg");
+$order_bg_image: url("~@/projects/dh/bg.png");
+$order_bg_image_m: url("~@/projects/dh/bg_m.jpg");
 $order_title_color: #fff;
 $order_subtitle_color: #fff;
-$order_input_label_color: #fff;
+$order_input_label_color: #986b48;
 $order_input_color: #000 !important;
 $order_input_placeholder: #999 !important;
 $order_input_bg: #fff !important;
-$order_input_border: solid 1px #fff;
-$order_input_focus_border: solid 2px #fff !important;
-$order_input_selected_color: solid 1px #fff !important;
-$order_check_desc_color: #fff !important;
+$order_input_border: solid 1px #986b48;
+$order_input_focus_border: solid 2px #986b48 !important;
+$order_input_selected_color: solid 1px #986b48 !important;
+$order_check_desc_color: #986b48 !important;
 $order_check_span_color: #e02200 !important;
-$order_submit_bg: linear-gradient( 90deg,
-rgba(255,
-166,
-23,
-1) 0%,
-rgba(237,
-0,
-0,
-1) 100%);
-$order_submit_border: 0px solid #b4904f !important;
+$order_submit_bg: #fff;
+$order_submit_border: 1px solid #b4904f !important;
 $order_submit_borderradius: 0px;
-$order_submit_color: #fff !important;
-$order_sumbit_disable_bg: #fff;
+$order_submit_color: #986b48 !important;
+$order_sumbit_disable_bg: #986b48;
 // contactInfo
 $contact_bg: #b4904f;
 $contact_bg_m: #b4904f;
@@ -90,54 +82,39 @@ $contact_shadow: 0 0 80px 0 rgba(0,
 $contact_btn_border: inset 0 0 1px 1px #fff;
 $contact_btn_color: #fff;
 $contact_btn_icon: #fff;
-$contact_btn_bg: transparent;
+$contact_btn_bg: #cf9a75;
 $contact_btn_hover_color: #fff;
 $contact_btn_hover_icon: #fff;
-$contact_btn_hover_bg: linear-gradient( 90deg,
-rgba(255,
-166,
-23,
-1) 0%,
-rgba(237,
-0,
-0,
-1) 100%);
-$contact_btn_border_radius: 99px;
-$contact_btn_addr_border_radius: 99px 0 0 99px;
-$contact_btn_gbtn_border_radius: 0 99px 99px 0;
-$contact_btn_addr_border_radius_m: 30px 30px 0 0 !important;
-$contact_btn_gbtn_border_radius_m: 0 0 30px 30px !important;
+$contact_btn_hover_bg: #cf9a75;
+$contact_btn_border_radius: 0;
+$contact_btn_addr_border: inset 0px 0px 1px 1px #cf9a75;
+$contact_btn_addr_border_radius: 0px 0 0 0px;
+$contact_btn_gbtn_border_radius: 0 0px 0px 0;
+$contact_btn_addr_border_radius_m: 0px 0px 0 0 !important;
+$contact_btn_gbtn_border_radius_m: 0 0 0px 0px !important;
 $contact_google_btn_color: #fff;
 $contact_google_btn_icon: #fff;
-$contact_google_btn_bg: #000;
-$contact_google_border: inset 0 0 0px 0px #000;
+$contact_google_btn_bg: #cf9a75;
+$contact_google_border: inset 0 0 1px 1px #cf9a75;
 $contact_google_hover_btn_color: #fff;
 $contact_google_hover_btn_icon: #fff;
-$contact_google_hover_btn_bg: linear-gradient( 90deg,
-rgba(255,
-166,
-23,
-1) 0%,
-rgba(237,
-0,
-0,
-1) 100%);
-$contact_google_hover_border: inset 0 0 0px 0px #000;
+$contact_google_hover_btn_bg: #cf9a75;
+$contact_google_hover_border: inset 0 0 1px 1px #cf9a75;
 // houseInfo
-$house_bg: #000;
+$house_bg: #fff;
 $house_title_color: #fff;
-$house_border_color: #846134;
-$house_label_color: #846134;
-$house_desc_color: #fff;
+$house_border_color: #cf9a75;
+$house_label_color: #000;
+$house_desc_color: #000;
 // mobileNav
-$mobile_nav_background: #b4904f;
+$mobile_nav_background: #cf9a75;
 $mobile_nav_color: #fff;
 $mobile_nav_border: #fff;
 $mobile_nav_icon: #fff;
 $mobile_dialog_bg: #fff;
-$mobile_dialog_icon: #b4904f;
+$mobile_dialog_icon: #cf9a75;
 $mobile_dialog_desc: #000;
-$mobile_dialog_submit_bg: #b4904f;
+$mobile_dialog_submit_bg: #cf9a75;
 $mobile_dialog_submit_color: #fff;
 
 /* dialog */
