--- a/src/assets/style/fonts.scss
+++ b/src/assets/style/fonts.scss
@@ -12,7 +12,7 @@ p {
 }
 
 h2 {
-    font-family: 'DFLiSongStd';
+ //   font-family: 'DFLiSongStd';
     margin: 0;
     font-weight: normal;
 }
@@ -33,6 +33,7 @@ p {
 /* animate css */
 
 /* font */
+/*
 @font-face {
     font-family: DFPingJuStd;
     src: url('~@/assets/font/DFPingJuStd-W7.otf?#iefix') format('embedded-opentype'),
@@ -58,3 +59,4 @@ p {
     font-weight: normal;
     font-style: normal;
 }
+*/
